production/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp-api
  namespace: production
spec:
  replicas: 2
  selector:
    matchLabels:
      app: myapp-api
  template:
    metadata:
      labels:
        app: myapp-api
    spec:
      containers:
        - name: myapp-api
          image: irwan34/api-service@sha256:becd1255b3ea410994edaa7d46bfe11c91db568ffeb0290927c9e4805412abef
          ports:
            - containerPort: 8000
