production/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
        - name: myapp
          image: irwan34/python-app@sha256:9dc060b10d5a4cb963b5a3e89a9e4e7df08a9fdc94efa6df2601e7e8e2994378
          ports:
            - containerPort: 8000
