production/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp-frontend
  namespace: production
spec:
  replicas: 2
  selector:
    matchLabels:
      app: myapp-frontend
  template:
    metadata:
      labels:
        app: myapp-frontend
    spec:
      containers:
        - name: myapp-frontend
          image: irwan34/frontend-service@sha256:e17b5fa4cbed50985389459cfc1c045a91ceb6bae7ec9af4b6ab3d157307c228
          ports:
            - containerPort: 8000
