production/service-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-api
spec:
  selector:
    app: myapp-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
