production/service-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-frontend
spec:
  selector:
    app: myapp-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
